# SpatialCoherence

./: .gitignore  CMakeLists.txt  C_37EN1.files  README.md  fourtiles.files  main.cpp  runForAllLAZinFolder.sh
QGIS/: README.md  bedum_active.gpkg  bedum_entries.gpkg  bedum_exits.gpkg  heerhugowaard_entries.gpkg  heerhugowaard_exits.gpkg  sample_band1.gpkg  sample_band2.gpkg  sample_centroids.gpkg  sample_vectorized.gpkg
